--- a/example.ipynb
+++ b/example.ipynb
@@ -138,7 +138,7 @@
         "    json.dump(data, outfile)\n",
         "\n",
         "# running algorithm\n",
-        "!java -Xmx5G -cp TSRN4HEN.jar algoritmos.TSRF params.json"
+        "!java -Xmx5G -cp TSRN4HEN.jar algorithms.TSRF params.json"
       ],
       "execution_count": 0,
       "outputs": []
@@ -169,7 +169,7 @@
         "with open('params.json', 'w') as outfile:\n",
         "    json.dump(data, outfile)\n",
         "\n",
-        "!java -Xmx5G -cp TSRN4HEN.jar algoritmos.GFHF params.json"
+        "!java -Xmx5G -cp TSRN4HEN.jar algorithms.GFHF params.json"
       ],
       "execution_count": 0,
       "outputs": []
@@ -203,7 +203,7 @@
         "with open('params.json', 'w') as outfile:\n",
         "    json.dump(data, outfile)\n",
         "\n",
-        "!java -Xmx5G -cp TSRN4HEN.jar algoritmos.LPHN params.json"
+        "!java -Xmx5G -cp TSRN4HEN.jar algorithms.LPHN params.json"
       ],
       "execution_count": 0,
       "outputs": []
@@ -234,7 +234,7 @@
         "with open('params.json', 'w') as outfile:\n",
         "    json.dump(data, outfile)\n",
         "\n",
-        "!java -Xmx5G -cp TSRN4HEN.jar algoritmos.LLGC params.json"
+        "!java -Xmx5G -cp TSRN4HEN.jar algorithms.LLGC params.json"
       ],
       "execution_count": 0,
       "outputs": []
@@ -265,7 +265,7 @@
         "with open('params.json', 'w') as outfile:\n",
         "    json.dump(data, outfile)\n",
         "\n",
-        "!java -Xmx5G -cp TSRN4HEN.jar algoritmos.GNetMine params.json"
+        "!java -Xmx5G -cp TSRN4HEN.jar algorithms.GNetMine params.json"
       ],
       "execution_count": 0,
       "outputs": []
@@ -287,7 +287,7 @@
         "with open('params.json', 'w') as outfile:\n",
         "    json.dump(data, outfile)\n",
         "\n",
-        "!java -Xmx5G -cp TSRN4HEN.jar algoritmos.GNetMine params.json"
+        "!java -Xmx5G -cp TSRN4HEN.jar algorithms.GNetMine params.json"
       ],
       "execution_count": 0,
       "outputs": []
