--- a/example.ipynb
+++ b/example.ipynb
@@ -116,7 +116,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Running TSRF"
+        "Running HENR2"
       ]
     },
     {
@@ -129,7 +129,7 @@
       "source": [
         "import json\n",
         "\n",
-        "data['output_file'] = 'tsrf.model'\n",
+        "data['output_file'] = 'henr2.model'\n",
         "data['target'] = 'event'\n",
         "data['mi'] = 0.9\n",
         "data['miBeta'] = 0.1\n",
@@ -138,7 +138,7 @@
         "    json.dump(data, outfile)\n",
         "\n",
         "# running algorithm\n",
-        "!java -Xmx5G -cp TSRN4HEN.jar algorithms.TSRF params.json"
+        "!java -Xmx5G -cp TSRN4HEN.jar algorithms.HENR2 params.json"
       ],
       "execution_count": 0,
       "outputs": []
@@ -309,7 +309,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Evaluation for TSRF, LLGC and GNetMine"
+        "Evaluation for HENR2, LLGC and GNetMine"
       ]
     },
     {
@@ -338,7 +338,7 @@
         "  del labeled_events[node]\n",
         "f.close()\n",
         "\n",
-        "output_model = 'tsrf.model' # or 'llgc.model' or 'gnetmine.model'\n",
+        "output_model = 'henr2.model' # or 'llgc.model' or 'gnetmine.model'\n",
         "\n",
         "predicted = []\n",
         "real_label = []\n",
@@ -401,7 +401,7 @@
         "  del labeled_events[node]\n",
         "f.close()\n",
         "\n",
-        "output_model = 'tsrf.model' # or 'llgc.model' or 'gnetmine.model'\n",
+        "output_model = 'henr2.model' # or 'llgc.model' or 'gnetmine.model'\n",
         "\n",
         "cmn = numpy.zeros(labels_size)\n",
         "f = open(output_model, 'r')\n",
