--- a/example.ipynb
+++ b/example.ipynb
@@ -130,12 +130,12 @@
         "import json\n",
         "\n",
         "data['output_file'] = 'henr2.model'\n",
-        "data['target'] = 'event'\n",
+        "data['target_layer'] = 'event'\n",
         "data['mi'] = 0.9\n",
         "data['miBeta'] = 0.1\n",
         "\n",
         "with open('params.json', 'w') as outfile:\n",
-        "    json.dump(data, outfile)\n",
+        "  json.dump(data, outfile)\n",
         "\n",
         "# running algorithm\n",
         "!java -Xmx5G -cp TSRN4HEN.jar algorithms.HENR2 params.json"
@@ -163,11 +163,10 @@
       "source": [
         "import json\n",
         "\n",
-        "data['labels'] = 'labels/inflation.50_labeled_events'\n",
         "data['output_file'] = 'gfhf.model'\n",
         "\n",
         "with open('params.json', 'w') as outfile:\n",
-        "    json.dump(data, outfile)\n",
+        "  json.dump(data, outfile)\n",
         "\n",
         "!java -Xmx5G -cp TSRN4HEN.jar algorithms.GFHF params.json"
       ],
@@ -194,14 +193,10 @@
       "source": [
         "import json\n",
         "\n",
-        "with open('params.json') as json_file:\n",
-        "    data = json.load(json_file)\n",
-        "    data['relations'] = ['datasets/inflation.edges']\n",
-        "    data['labels'] = 'labels/inflation.50_labeled_events'\n",
-        "    data['output_file'] = 'lphn.model'\n",
+        "data['output_file'] = 'lphn.model'\n",
         "\n",
         "with open('params.json', 'w') as outfile:\n",
-        "    json.dump(data, outfile)\n",
+        "  json.dump(data, outfile)\n",
         "\n",
         "!java -Xmx5G -cp TSRN4HEN.jar algorithms.LPHN params.json"
       ],
@@ -232,7 +227,7 @@
         "data['mi'] = 0.9\n",
         "\n",
         "with open('params.json', 'w') as outfile:\n",
-        "    json.dump(data, outfile)\n",
+        "  json.dump(data, outfile)\n",
         "\n",
         "!java -Xmx5G -cp TSRN4HEN.jar algorithms.LLGC params.json"
       ],
@@ -258,12 +253,13 @@
       },
       "source": [
         "import json\n",
+        "\n",
         "data['output_file'] = 'gnetmine.model'\n",
         "data['mi'] = 0.5\n",
         "data['weight_relations'] = {}\n",
         "\n",
         "with open('params.json', 'w') as outfile:\n",
-        "    json.dump(data, outfile)\n",
+        "  json.dump(data, outfile)\n",
         "\n",
         "!java -Xmx5G -cp TSRN4HEN.jar algorithms.GNetMine params.json"
       ],
@@ -285,7 +281,7 @@
         "data['weight_relations'] = {'event_temporal': 0.2, 'event_HL': 0.3, 'event_bag':0.7, 'event_geographic': 0.5}\n",
         "\n",
         "with open('params.json', 'w') as outfile:\n",
-        "    json.dump(data, outfile)\n",
+        "  json.dump(data, outfile)\n",
         "\n",
         "!java -Xmx5G -cp TSRN4HEN.jar algorithms.GNetMine params.json"
       ],
@@ -401,7 +397,7 @@
         "  del labeled_events[node]\n",
         "f.close()\n",
         "\n",
-        "output_model = 'henr2.model' # or 'llgc.model' or 'gnetmine.model'\n",
+        "output_model = 'gfhf.model' # or 'lphn.model'
         "\n",
         "cmn = numpy.zeros(labels_size)\n",
         "f = open(output_model, 'r')\n",
