update the informations and examples

--- a/example.ipynb
+++ b/example.ipynb
@@ -1,67 +1,65 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "example.ipynb",
-      "provenance": [],
-      "collapsed_sections": [
-        "XnTeuDX8QxyR",
-        "6IKBgIBWQS-R"
-      ],
-      "authorship_tag": "ABX9TyM7FHY+9bHaT5X5BUnnvBEN",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
+      "metadata": {},
       "source": [
-        "<a href=\"https://colab.research.google.com/github/BrucceNeves/TSRN4HEN/blob/master/example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "# Colab Example"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 302
+        },
         "id": "O6hDLd323-10",
-        "colab_type": "code",
-        "colab": {}
+        "outputId": "fb50aa1e-8cae-42d5-a182-a0d580d943b8"
       },
+      "outputs": [],
       "source": [
         "!wget https://github.com/BrucceNeves/TSRN4HEN/archive/master.zip\n",
         "\n",
         "!unzip -q master.zip\n",
         "\n",
         "%cd TSRN4HEN-master/"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "hO7ANF0U3h-U",
-        "colab_type": "text"
-      },
-      "source": [
-        "Creating a set with 50 labeled events for each class"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import random, json, numpy\n",
+        "from sklearn.metrics import f1_score"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
       "metadata": {
-        "id": "dtt8O6_sEJAE",
-        "colab_type": "code",
-        "colab": {}
+        "id": "hO7ANF0U3h-U"
       },
+      "source": [
+        "## Creating a set with 50 labeled events for each class"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        },
+        "id": "dtt8O6_sEJAE",
+        "outputId": "82aef578-52e9-49b1-9541-be02b51f549b"
+      },
+      "outputs": [],
       "source": [
         "!cd labels && unzip inflation.zip\n",
         "!cd datasets && unzip inflation.zip\n",
@@ -69,41 +67,34 @@
         "list_labeled_events = 'labels/inflation.full_labels'\n",
         "output_labeled_events = 'labels/inflation.50_labeled_events'\n",
         "\n",
-        "data = {}\n",
-        "data['iterations'] = 1000\n",
-        "data['convergenceThreshold'] = 0.00005\n",
-        "data['relations'] = ['datasets/inflation.edges']\n",
-        "data['labels'] = output_labeled_events\n",
-        "\n",
-        "import random\n",
+        "params_base = {}\n",
+        "params_base['iterations'] = 1000\n",
+        "params_base['convergenceThreshold'] = 0.00005\n",
+        "params_base['relations'] = ['datasets/inflation.edges']\n",
+        "params_base['labels'] = output_labeled_events\n",
         "\n",
         "# reading file with all labels\n",
-        "f = open(list_labeled_events, 'r')\n",
         "labels = {}\n",
-        "for line in f:\n",
-        "  node, label = line.strip().split('\\t')\n",
-        "  if label not in labels:\n",
-        "    labels[label] = []\n",
-        "  labels[label].append(node)\n",
-        "f.close()\n",
+        "with open(list_labeled_events, 'r') as f:\n",
+        "  for line in f:\n",
+        "    node, label = line.strip().split('\\t')\n",
+        "    if label not in labels:\n",
+        "      labels[label] = []\n",
+        "    labels[label].append(node)\n",
         "\n",
         "# selecting 50 random events of each class\n",
-        "f = open(output_labeled_events, 'w')\n",
-        "for label in labels:\n",
-        "  nodes = labels[label]\n",
-        "  random.shuffle(nodes)\n",
-        "  for i in range(50):\n",
-        "    f.write(\"\\t\".join([nodes[i],label]) + \"\\n\")\n",
-        "f.close()"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "with open(output_labeled_events, 'w') as f:\n",
+        "  for label in labels:\n",
+        "    nodes = labels[label]\n",
+        "    random.shuffle(nodes)\n",
+        "    for i in range(50):\n",
+        "      f.write(\"\\t\".join([nodes[i],label]) + \"\\n\")"
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "XnTeuDX8QxyR",
-        "colab_type": "text"
+        "id": "XnTeuDX8QxyR"
       },
       "source": [
         "# Running Methods"
@@ -112,8 +103,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "FCdzZuJcNf63",
-        "colab_type": "text"
+        "id": "FCdzZuJcNf63"
       },
       "source": [
         "Running HENR2"
@@ -121,33 +111,29 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "SvcID16y6NGV",
-        "colab_type": "code",
-        "colab": {}
+        "id": "SvcID16y6NGV"
       },
+      "outputs": [],
       "source": [
-        "import json\n",
-        "\n",
+        "data = params_base.copy()\n",
         "data['output_file'] = 'henr2.model'\n",
         "data['target_layer'] = 'event'\n",
-        "data['mi'] = 0.9\n",
-        "data['miBeta'] = 0.1\n",
+        "data['mi'] = 1.0\n",
+        "data['miBeta'] = 0.8\n",
         "\n",
         "with open('params.json', 'w') as outfile:\n",
         "  json.dump(data, outfile)\n",
         "\n",
         "# running algorithm\n",
         "!java -Xmx5G -cp TSRN4HEN.jar algorithms.HENR2 params.json"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zvrVRA3GNlQM",
-        "colab_type": "text"
+        "id": "zvrVRA3GNlQM"
       },
       "source": [
         "Running GFHF"
@@ -155,29 +141,25 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "wy5D5YXuNuZq",
-        "colab_type": "code",
-        "colab": {}
+        "id": "wy5D5YXuNuZq"
       },
+      "outputs": [],
       "source": [
-        "import json\n",
-        "\n",
+        "data = params_base.copy()\n",
         "data['output_file'] = 'gfhf.model'\n",
         "\n",
         "with open('params.json', 'w') as outfile:\n",
         "  json.dump(data, outfile)\n",
         "\n",
         "!java -Xmx5G -cp TSRN4HEN.jar algorithms.GFHF params.json"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "nwq1ynAaQtVC",
-        "colab_type": "text"
+        "id": "nwq1ynAaQtVC"
       },
       "source": [
         "Running LPHN"
@@ -185,29 +167,25 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "z7n6RqPHN3yn",
-        "colab_type": "code",
-        "colab": {}
+        "id": "z7n6RqPHN3yn"
       },
+      "outputs": [],
       "source": [
-        "import json\n",
-        "\n",
+        "data = params_base.copy()\n",
         "data['output_file'] = 'lphn.model'\n",
         "\n",
         "with open('params.json', 'w') as outfile:\n",
         "  json.dump(data, outfile)\n",
         "\n",
         "!java -Xmx5G -cp TSRN4HEN.jar algorithms.LPHN params.json"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7a4pHS7KOWm_",
-        "colab_type": "text"
+        "id": "7a4pHS7KOWm_"
       },
       "source": [
         "Running LLGC"
@@ -215,30 +193,31 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 493
+        },
         "id": "1GSU3DtKN96d",
-        "colab_type": "code",
-        "colab": {}
+        "outputId": "a5479aa6-d1a3-40a3-8ceb-d8f1eee72429"
       },
+      "outputs": [],
       "source": [
-        "import json\n",
-        "\n",
+        "data = params_base.copy()\n",
         "data['output_file'] = 'llgc.model'\n",
-        "data['mi'] = 0.9\n",
+        "data['mi'] = 0.5\n",
         "\n",
         "with open('params.json', 'w') as outfile:\n",
         "  json.dump(data, outfile)\n",
         "\n",
         "!java -Xmx5G -cp TSRN4HEN.jar algorithms.LLGC params.json"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KDUPw628OaBI",
-        "colab_type": "text"
+        "id": "KDUPw628OaBI"
       },
       "source": [
         "Running GNetMine"
@@ -246,14 +225,13 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "WqzTs52GOdRH",
-        "colab_type": "code",
-        "colab": {}
+        "id": "WqzTs52GOdRH"
       },
+      "outputs": [],
       "source": [
-        "import json\n",
-        "\n",
+        "data = params_base.copy()\n",
         "data['output_file'] = 'gnetmine.model'\n",
         "data['mi'] = 0.5\n",
         "data['weight_relations'] = {}\n",
@@ -262,20 +240,17 @@
         "  json.dump(data, outfile)\n",
         "\n",
         "!java -Xmx5G -cp TSRN4HEN.jar algorithms.GNetMine params.json"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "e1r8nbnhOpXl",
-        "colab_type": "code",
-        "colab": {}
+        "id": "e1r8nbnhOpXl"
       },
+      "outputs": [],
       "source": [
-        "import json\n",
-        "\n",
+        "data = params_base.copy()\n",
         "data['output_file'] = 'gnetmine.model'\n",
         "data['mi'] = 0.5\n",
         "data['weight_relations'] = {'event_temporal': 0.2, 'event_HL': 0.3, 'event_bag':0.7, 'event_geographic': 0.5}\n",
@@ -284,15 +259,12 @@
         "  json.dump(data, outfile)\n",
         "\n",
         "!java -Xmx5G -cp TSRN4HEN.jar algorithms.GNetMine params.json"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6IKBgIBWQS-R",
-        "colab_type": "text"
+        "id": "6IKBgIBWQS-R"
       },
       "source": [
         "# Evaluation"
@@ -301,8 +273,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ny7eepaH38fM",
-        "colab_type": "text"
+        "id": "ny7eepaH38fM"
       },
       "source": [
         "Evaluation for HENR2, LLGC and GNetMine"
@@ -310,55 +281,51 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
         "id": "1zByrxwAQZp-",
-        "colab_type": "code",
-        "colab": {}
+        "outputId": "a3db70fa-2288-495b-e73f-525a30fa9ef0"
       },
+      "outputs": [],
       "source": [
-        "import json, numpy\n",
-        "from sklearn.metrics import f1_score\n",
-        "\n",
-        "f = open(list_labeled_events, 'r')\n",
         "labeled_events = {}\n",
-        "for line in f:\n",
-        "  node, label = line.strip().split('\\t')\n",
-        "  label = numpy.argmax([float(x) for x in label.split(',')])\n",
-        "  labeled_events[node] = label\n",
-        "f.close()\n",
+        "with open(list_labeled_events, 'r') as f:\n",
+        "  for line in f:\n",
+        "    node, label = line.strip().split('\\t')\n",
+        "    label = numpy.argmax([float(x) for x in label.split(',')])\n",
+        "    labeled_events[node] = label\n",
         "\n",
         "# remove labelled data\n",
-        "f = open(output_labeled_events, 'r')\n",
-        "for line in f:\n",
-        "  node, label = line.strip().split('\\t')\n",
-        "  del labeled_events[node]\n",
-        "f.close()\n",
+        "with open(output_labeled_events, 'r') as f:\n",
+        "  for line in f:\n",
+        "    node, label = line.strip().split('\\t')\n",
+        "    del labeled_events[node]\n",
         "\n",
-        "output_model = 'henr2.model' # or 'llgc.model' or 'gnetmine.model'\n",
+        "output_model = 'gnetmine.model' # or 'llgc.model' or 'henr2.model'\n",
         "\n",
         "predicted = []\n",
         "real_label = []\n",
-        "f = open(output_model, 'r')\n",
-        "for line in f:\n",
-        "  node, label = line.strip().split('\\t')\n",
-        "  if node not in labeled_events:\n",
-        "    continue\n",
-        "  label = numpy.argmax([float(x) for x in label.split(',')])\n",
-        "  predicted.append(label)\n",
-        "  real_label.append(labeled_events[node])\n",
-        "f.close()\n",
+        "with open(output_model, 'r') as f:\n",
+        "  for line in f:\n",
+        "    node, label = line.strip().split('\\t')\n",
+        "    if node not in labeled_events:\n",
+        "      continue\n",
+        "    label = numpy.argmax([float(x) for x in label.split(',')])\n",
+        "    predicted.append(label)\n",
+        "    real_label.append(labeled_events[node])\n",
         "\n",
         "print('macro', f1_score(real_label, predicted, average='macro'))\n",
         "print('micro', f1_score(real_label, predicted, average='micro'))"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4iXSJzFbYJNP",
-        "colab_type": "text"
+        "id": "4iXSJzFbYJNP"
       },
       "source": [
         "Evaluation for GFHF and LPHN\n",
@@ -368,47 +335,40 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "2RwR-CmTYHN7",
-        "colab_type": "code",
-        "colab": {}
+        "id": "2RwR-CmTYHN7"
       },
+      "outputs": [],
       "source": [
-        "import json, numpy\n",
-        "from sklearn.metrics import f1_score\n",
-        "\n",
         "labels_size = 0\n",
-        "f = open(list_labeled_events, 'r')\n",
         "labeled_events = {}\n",
-        "for line in f:\n",
-        "  node, label = line.strip().split('\\t')\n",
-        "  label = numpy.argmax([float(x) for x in label.split(',')])\n",
-        "  labeled_events[node] = {'real_label': label, 'predicted': -1}\n",
-        "  if label > labels_size:\n",
-        "    labels_size = label\n",
-        "f.close()\n",
-        "\n",
+        "with open(list_labeled_events, 'r') as f:\n",
+        "  for line in f:\n",
+        "    node, label = line.strip().split('\\t')\n",
+        "    label = numpy.argmax([float(x) for x in label.split(',')])\n",
+        "    labeled_events[node] = {'real_label': label, 'predicted': -1}\n",
+        "    if label > labels_size:\n",
+        "      labels_size = label\n",
         "labels_size += 1\n",
         "\n",
         "# remove labelled data\n",
-        "f = open(output_labeled_events, 'r')\n",
-        "for line in f:\n",
-        "  node, label = line.strip().split('\\t')\n",
-        "  del labeled_events[node]\n",
-        "f.close()\n",
+        "with open(output_labeled_events, 'r') as f:\n",
+        "  for line in f:\n",
+        "    node, label = line.strip().split('\\t')\n",
+        "    del labeled_events[node]\n",
         "\n",
-        "output_model = 'gfhf.model' # or 'lphn.model'
+        "output_model = 'gfhf.model' # or 'lphn.model'\n",
         "\n",
         "cmn = numpy.zeros(labels_size)\n",
-        "f = open(output_model, 'r')\n",
-        "for line in f:\n",
-        "  node, label = line.strip().split('\\t')\n",
-        "  if node not in labeled_events:\n",
-        "    continue\n",
-        "  label = numpy.array([float(x) for x in label.split(',')])\n",
-        "  cmn += label\n",
-        "  labeled_events[node]['predicted'] = label\n",
-        "f.close()\n",
+        "with open(output_model, 'r') as f:\n",
+        "  for line in f:\n",
+        "    node, label = line.strip().split('\\t')\n",
+        "    if node not in labeled_events:\n",
+        "      continue\n",
+        "    label = numpy.array([float(x) for x in label.split(',')])\n",
+        "    cmn += label\n",
+        "    labeled_events[node]['predicted'] = label\n",
         "\n",
         "predicted = []\n",
         "real_label = []\n",
@@ -422,9 +382,30 @@
         "\n",
         "print('macro', f1_score(real_label, predicted, average='macro'))\n",
         "print('micro', f1_score(real_label, predicted, average='micro'))"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.6"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
